--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,4 +38,6 @@ jobs:
         env:
           COOKIES: ${{ secrets.SMZDM_COOKIE }}
           SERVERCHAN_SECRETKEY: ${{ secrets.SERVERCHAN_SECRETKEY }}
+          COOKIES1: ${{ secrets.SMZDM_COOKIE1 }}
+          SERVERCHAN_SECRETKEY1: ${{ secrets.SERVERCHAN_SECRETKEY1 }}
         run: python main.py #>SMZDM_Bot.log
